--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,8 +1,8 @@
 .link {
-  text-decoration: none;
-  color: #2f80ed;
+  text-decoration: underline;
+  color: #fff;
   transition: opacity 0.1s ease 0.1s;
 }
 .link:hover {
-  opacity: 0.5;
+  opacity: 0.8;
 }   
