--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -3,12 +3,46 @@
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 740px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   text-decoration: none;
-  position: relative;
   z-index: 1;
+  position: relative;
+}
+.cover__background::after {
+  content: "";
+  display: block;
+  background-color: #2A2C2F;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: .3;
+  box-sizing: border-box;
+}
+.cover__background:hover::after {
+  opacity: .8;
+}
+@media screen and (min-width: 1024px) {
+  .cover__background {
+    min-height: 740px; 
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .cover__background {
+    min-height: 640px;  
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .cover__background {
+    min-height: 480px; 
+  }
+}
+@media screen and (max-width: 425px) {
+  .cover__background {
+    min-height: 200px;
+  }
 }
