--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,31 @@
 .cover__subtitle {
-  font-family: Inter;
-  font-size: 18px;
+  font-family: 'Inter';
   font-weight: 400;
-  line-height: 22px;
   text-align: center;
   color: #fff;
-  padding: 32px 0 0 0;
-  max-width: 360px;
   margin: 0;
+  max-width: 360px;
+  position: relative;
+  z-index: 2;
+}
+@media screen and (min-width: 768px) {
+  .cover__subtitle {
+    font-size: 18px;
+    line-height: 22px;
+    margin: 32px 0 0 0;
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    margin: 32px 0 0 0;
+  }
+}
+@media screen and (max-width: 424px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    margin: 16px 0 0 0;
+  }
 }
