--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,10 +1,28 @@
 .cover__title {
   color: #fff;
   font-family: 'Inter';
-  font-size: 72px;
   font-weight: 900;
-  line-height: 76px;
   text-align: center;
   margin: 0;
   max-width: 560px;
+  position: relative;
+  z-index: 2;
+}
+@media screen and (min-width: 768px) {
+  .cover__title {
+    font-size: 72px;
+    line-height: 76px;
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .cover__title {
+    font-size: 52px;
+    line-height: 55px;
+  }
+}
+@media screen and (max-width: 424px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
