--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,18 @@
 .cover {
-  padding: 52px 48px 0 48px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 1024px) {
+  .cover {
+    margin-top: 92px;
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 1023px) {
+  .cover {
+    margin-top: 90px;
+  }
+}
+@media screen and (max-width: 424px) {
+  .cover {
+    margin-top: 66px;
+  }
 }
