--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,9 +1,20 @@
 .footer__copyright {
-  font-family: Inter;
+  font-family: 'Inter';
   font-size: 14px;
   font-weight: 400;
-  line-height: 16px;
   text-align: right;
   color: #fff;
   margin: 0;
+  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .footer__copyright {
+    line-height: 16px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 14px;
+    margin-top: 48px;
+  }
 }
