--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,5 +3,17 @@
   padding: 0;
   margin: 0;
   display: flex;
-  gap: 18px;
+  
+}
+@media screen and (min-width: 768px) {
+  .footer__links {
+    flex-direction: row;
+    gap: 18px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer__links {
+    flex-direction: column;
+    gap: 32px;
+  }
 }
