--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,23 @@
 .footer {
-  margin: 24px 48px 24px 48px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+}
+@media screen and (min-width: 1024px) {
+  .footer {
+    margin: 92px 48px 24px 48px;
+    align-items: flex-end;
+  }
+}
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+  .footer {
+    margin: 88px 24px 24px 24px;
+    align-items: flex-end;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer {
+    margin: 64px 0 24px 16px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
