--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,9 +3,7 @@
   font-weight: 400;
   text-align: right;
   color: #fff;
-}
-.header__lang-link:nth-of-type(1) {
-  text-decoration: underline;
+  text-decoration: none;
 }
 @media screen and (min-width: 768px) {
   .header__lang-link {
@@ -13,13 +11,7 @@
     line-height: 28px;
   }
 }
-@media screen and (max-width: 768px) {
-  .header__lang-link {
-    font-size: 24px;
-    line-height: 28px;
-  }
-}
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 20px;
