--- a/blocks/intro/__list-text/intro__list-text.css
+++ b/blocks/intro/__list-text/intro__list-text.css
@@ -1,9 +1,9 @@
 .intro__list-text {
   margin: 0;
   padding: 0;
-  font-family: Inter;
+  font-family: 'Inter';
   font-size: 12px;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 18px;
   text-align: left;
 }
