--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -13,19 +13,19 @@
     margin-left: 148px;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (max-width: 1280px) {
+  .lead__caption {
+    margin-left: 148px;
+  }
+}
+@media screen and (max-width: 1024px) {
   .lead__caption {
     margin-left: 48px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .lead__caption {
     margin-left: 24px;
-  }
-}
-@media screen and (min-width: 320px) and (max-width: 768px) {
-  .lead__caption {
-    margin-left: 16px;
   }
 }
 @media screen and (max-width: 320px) {
