--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,41 +3,41 @@
   font-weight: 400;
   text-align: center;
   color: #fff;
+  margin: 0 auto;
 }
 @media screen and (min-width: 1280px) {
   .lead__subtitle {
-    margin: 0 320px 64px 320px;
+    font-size: 30px;
+    line-height: 36px;
+    max-width: calc(100% - 640px);
+    margin-top: 32px;
+    margin-bottom: 64px;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .lead__subtitle {
-    margin: 0 192px 56px 192px;
-  }
-}
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px){
   .lead__subtitle {
     font-size: 30px;
     line-height: 36px;
+    max-width: calc(100% - 380px);
+    margin-top: 32px;
+    margin-bottom: 56px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .lead__subtitle {
     font-size: 30px;
     line-height: 36px;
-    margin: 0 64px 56px 64px;
+    max-width: calc(100% - 128px);
+    margin-top: 32px;
+    margin-bottom: 56px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
-    margin: 0 16px 40px 16px;
-  }
-}
-@media screen and (max-width: 320px) {
-  .lead__subtitle {
-    font-size: 16px;
-    line-height: 20px;
-    margin: 0 16px 40px 16px;
+    max-width: calc(100% - 32px);
+    margin-top: 16px;
+    margin-bottom: 40px;
   }
 }
