--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,39 +3,40 @@
   font-weight: 900;
   text-align: center;
   color: #fff;
+  margin: 28px auto 0 auto;
 }
 @media screen and (min-width: 1280px) {
   .lead__title {
-    margin: 0 280px 32px 280px;
+    font-size: 96px;
+    line-height: 100px;
+    max-width: calc(100% - 560px);
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .lead__title {
-    margin: 0 152px 32px 152px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .lead__title {
-    margin: 0 24px 32px 24px;
-  }
-}
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px){
   .lead__title {
     font-size: 96px;
     line-height: 100px;
+    max-width: calc(100% - 300px);
   }
 }
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .lead__title {
+    font-size: 96px;
+    line-height: 100px;
+    max-width: calc(100% - 96px);
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .lead__title {
+    font-size: 54px;
+    line-height: 72px;
+    max-width: calc(100% - 32px);
+  }
+}
+@media screen and (max-width: 424px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
-    margin: 0 16px 16px 16px;
-  }
-}
-@media screen and (max-width: 320px) {
-  .lead__title {
-    font-size: 40px;
-    line-height: 44px;
-    margin: 0 16px 16px 16px;
+    max-width: calc(100% - 32px);
   }
 }
