--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,42 +1,50 @@
 .places__item {
   display: grid;
- 
   grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
-  grid-template-rows: repeat(auto-fill,  auto);
-
-  justify-content: space-between;
-  margin: 0 0 80px 0;
+  grid-template-rows: repeat(auto-fill,  minmax(46px, 1fr));
+  margin: 0 auto;
 }
 .places__item:last-child {
-  margin: 0; 
+  margin-bottom: 0;
 }
-
 @media screen and (min-width: 1280px) {
   .places__item {
     column-gap: 40px;
     row-gap: 48px;
+    margin-bottom: 80px;
+    width: calc(100% - 296px);
+    grid-template-columns: repeat(auto-fill, minmax(460px,1fr));
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places__item {
     column-gap: 32px;
     row-gap: 48px;
+    margin-bottom: 80px;
+    width: calc(100% - 96px);
+    grid-template-columns: repeat(auto-fill, minmax(440px,1fr));
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .places__item { 
-    column-gap: 28px;
+    column-gap: 32px;
     row-gap: 48px;
+    margin-bottom: 73px;
+    grid-template-columns: repeat(auto-fill, minmax(340px,1fr));
   }
 }
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .places__item {
     column-gap: 28px;
     row-gap: 48px;
+    margin-bottom: 73px;
+    grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 424px) {
   .places__item {
     row-gap: 32px;
+    margin-bottom: 50px;
+    grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
   }
 }
