--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,13 +1,23 @@
 .places__paragraph {
   font-family: 'Inter';
-  font-size: 18px;
   font-weight: 400;
-  line-height: 29px;
   text-align: left;
   margin: 0;
   padding: 0;
   color: #fff;
 }
 .places__paragraph:nth-of-type(2n) {
-  margin: 25px 0 0 0;
+    margin-top: 25px;
+}
+@media screen and (min-width: 768px) {
+  .places__paragraph { 
+    font-size: 18px;
+    line-height: 29px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .places__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+  }
 }
