--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -5,33 +5,22 @@
   color: #fff;
   margin: 0;
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1024px) {
   .places__title {
     font-size: 72px;
     line-height: 76px;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .places__title {
-    font-size: 72px;
-    line-height: 76px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 425px) and (max-width: 1023px) {
   .places__title {
     font-size: 42px;
     line-height: 46px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (max-width: 424px) {
   .places__title {
     font-size: 32px;
     line-height: 35px;
-  }
-}
-@media screen and (max-width: 320px) {
-  .places__title {
-  font-size: 32px;
-  line-height: 35px;
+    padding-left: 16px;
   }
 }
