--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -1,8 +1,8 @@
 .places__url-heading {
-  color: #AAA;
+  color: #aaa;
   padding: 0;
   margin: 0;
-  font-family: Inter;
+  font-family: 'Inter';
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
