--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -3,3 +3,8 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+@media screen and (max-width: 424px) {
+  .places__website {
+    padding-left: 16px;
+  }
+}
