--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,29 +1,26 @@
-/* .places {
-  min-width: 320px;
-  max-width: 984px;
-} */
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .places {
-    margin: 92px 48px 0 48px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .places { 
-    margin: 92px 48px 0 48px;
-  }
-}
-@media screen and (min-width: 320px) and (max-width: 768px) {
-  .places {
-    margin: 88px 24px 0 24px;
-  }
-}
-@media screen and (max-width: 320px) {
-  .places {
-    margin: 64px 0 0 0;
-  }
-}
+
 @media screen and (min-width: 1280px) {
+  .places { 
+    margin-top: 92px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places {
-    margin: 92px 148px 0 148px;
+    margin-top: 92px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .places {
+    margin-top: 88px;
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .places {
+    margin-top: 64px;
+  }
+}
+@media screen and (max-width: 424px) {
+  .places {
+    margin-top: 64px;
   }
 }
