--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,12 +1,7 @@
 .cover {
-  margin: 0 auto;
+  margin: 92px auto 0 auto;
 }
-@media screen and (min-width: 1024px) {
-  .cover {
-    margin-top: 92px;
-  }
-}
-@media screen and (min-width: 425px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .cover {
     margin-top: 90px;
   }
