--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -10,6 +10,7 @@
   text-decoration: none;
   z-index: 1;
   position: relative;
+  min-height: 740px;
 }
 .cover__background::after {
   content: "";
@@ -26,17 +27,12 @@
 .cover__background:hover::after {
   opacity: .8;
 }
-@media screen and (min-width: 1024px) {
-  .cover__background {
-    min-height: 740px; 
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen  and (max-width: 1279px) {
   .cover__background {
     min-height: 640px;  
   }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .cover__background {
     min-height: 480px; 
   }
