--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,17 +1,14 @@
 .footer {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+  margin: 92px auto 24px auto;
+  max-width: calc(100% - 96px);
 }
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .footer {
-    margin: 92px 48px 24px 48px;
-    align-items: flex-end;
-  }
-}
-@media screen and (min-width: 767px) and (max-width: 1023px) {
-  .footer {
-    margin: 88px 24px 24px 24px;
-    align-items: flex-end;
+    margin-top: 88px;
+    max-width: calc(100% - 48px);
   }
 }
 @media screen and (max-width: 767px) {
