--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,27 +1,22 @@
 .header {
   display: flex;
   justify-content: space-between;
-  margin: 28px auto 48px auto;
+  margin: 28px auto 56px auto;
+  max-width: calc(100% - 96px);
 }
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .header {
-    margin-bottom: 56px;
-    width: calc(100% - 96px);
+    margin-bottom: 48px; 
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .header {
-    width: calc(100% - 96px);
+    max-width: calc(100% - 48px);
   }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .header {
-    width: calc(100% - 64px);
-  }
-}
-@media screen and (max-width: 424px) {
+@media screen and (max-width: 767px) {
   .header {
     margin-top: 16px;
-    width: calc(100% - 32px);
+    max-width: calc(100% - 32px);
   }
 }
