--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -1,19 +1,14 @@
 .intro__subtitle {
-  font-family: 'Inter';
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
   color: #fff;
   padding: 0;
-}
-@media screen and (min-width: 425px) {
-  .intro__subtitle {
-    margin: 40px 0 33px 0;
-  }
+  margin: 40px 0 33px 0;
 }
 @media screen and (max-width: 424px) {
   .intro__subtitle {
-    margin: 37px 0 37px 0;
+    margin: 37px 0;
   }
 }
