--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,24 +1,19 @@
 .intro {
-  margin: 0;
   max-width: 690px;
+  margin: 92px 0 92px 148px;
 }
-@media screen and  (min-width: 1280px) {
+@media screen and (max-width: 1279px) {
   .intro {
-    margin: 92px 0 92px 148px;
+    margin-left: 48px;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
   .intro {
-    margin: 92px 0 92px 48px;
-  }
-}
-@media screen and (min-width: 425px) and (max-width: 1023px) {
-  .intro {
-    margin: 88px 24px 88px 24px;
+    margin: 88px 24px;
   }
 }
 @media screen and (max-width: 424px) {
   .intro {
-    margin: 64px 16px 64px 16px;
+    margin: 64px 16px;
   }
 }
