--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,34 +1,24 @@
 .lead__caption {
-  font-family: Inter;
   font-size: 10px;
   font-weight: 400;
   line-height: 14px;
   text-align: left;
   text-transform: uppercase;
+  letter-spacing: .15em;
   color: #fff;
-  margin: 8px 0 0 0;
+  margin: 8px 0 0 148px;
 }
-@media screen and (min-width: 1280px) {
-  .lead__caption {
-    margin-left: 148px;
-  }
-}
-@media screen and (max-width: 1280px) {
-  .lead__caption {
-    margin-left: 148px;
-  }
-}
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .lead__caption {
     margin-left: 48px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .lead__caption {
     margin-left: 24px;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .lead__caption {
     margin-left: 16px;
   }
