--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,14 +1,15 @@
 .lead__image {
   box-sizing: border-box;
   width: 100%;
+  padding: 0 148px;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .lead__image {
-    padding: 0 48px 0 48px;
+    padding: 0 48px ;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 1023px) {
   .lead__image {
-    padding: 0 148px 0 148px;
+    padding: 0;
   }
 }
