--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,35 +1,21 @@
 .lead__subtitle {
-  font-family: 'Inter';
   font-weight: 400;
   text-align: center;
   color: #fff;
-  margin: 0 auto;
+  font-size: 30px;
+  line-height: 36px;
+  max-width: calc(100% - 640px);
+  margin: 32px auto 64px auto;
 }
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 1279px){
   .lead__subtitle {
-    font-size: 30px;
-    line-height: 36px;
-    max-width: calc(100% - 640px);
-    margin-top: 32px;
-    margin-bottom: 64px;
-  }
-}
-@media screen and (min-width: 1024px) and (max-width: 1279px){
-  .lead__subtitle {
-    font-size: 30px;
-    line-height: 36px;
     max-width: calc(100% - 380px);
-    margin-top: 32px;
     margin-bottom: 56px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .lead__subtitle {
-    font-size: 30px;
-    line-height: 36px;
     max-width: calc(100% - 128px);
-    margin-top: 32px;
-    margin-bottom: 56px;
   }
 }
 @media screen and (max-width: 767px) {
