--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,42 +1,31 @@
 .lead__title {
-  font-family: 'Inter';
   font-weight: 900;
   text-align: center;
   color: #fff;
-  margin: 28px auto 0 auto;
+  margin: 0 auto;
+  font-size: 96px;
+  line-height: 100px;
+  max-width: calc(100% - 560px);
 }
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 1279px){
   .lead__title {
-    font-size: 96px;
-    line-height: 100px;
-    max-width: calc(100% - 560px);
-  }
-}
-@media screen and (min-width: 1024px) and (max-width: 1279px){
-  .lead__title {
-    font-size: 96px;
-    line-height: 100px;
     max-width: calc(100% - 300px);
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .lead__title {
-    font-size: 96px;
-    line-height: 100px;
-    max-width: calc(100% - 96px);
+    max-width: calc(100% - 48px);
   }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .lead__title {
     font-size: 54px;
-    line-height: 72px;
-    max-width: calc(100% - 32px);
+    line-height: 58px;
   }
 }
 @media screen and (max-width: 424px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
-    max-width: calc(100% - 32px);
   }
 }
