--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,3 +1,13 @@
 .places__image {
   width: 100%;
 }
+/* @media screen and (max-width: 425px) {
+  .places__image {
+    padding-left: 16px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .places__image {
+    padding: 0;
+  }
+} */
