--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,50 +1,44 @@
 .places__item {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
-  grid-template-rows: repeat(auto-fill,  minmax(46px, 1fr));
-  margin: 0 auto;
+  column-gap: 40px;
+  row-gap: 48px;
+  margin: 0 auto 80px auto;
+  max-width: calc(100% - 296px);
+  grid-template-columns: 460px 1fr;
 }
 .places__item:last-child {
   margin-bottom: 0;
 }
-@media screen and (min-width: 1280px) {
-  .places__item {
-    column-gap: 40px;
-    row-gap: 48px;
-    margin-bottom: 80px;
-    width: calc(100% - 296px);
-    grid-template-columns: repeat(auto-fill, minmax(460px,1fr));
-  }
-}
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .places__item {
     column-gap: 32px;
-    row-gap: 48px;
-    margin-bottom: 80px;
-    width: calc(100% - 96px);
-    grid-template-columns: repeat(auto-fill, minmax(440px,1fr));
+    max-width: calc(100% - 96px);
+    grid-template-columns: 440px 1fr;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .places__item { 
-    column-gap: 32px;
-    row-gap: 48px;
-    margin-bottom: 73px;
-    grid-template-columns: repeat(auto-fill, minmax(340px,1fr));
-  }
-}
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .places__item {
     column-gap: 28px;
     row-gap: 48px;
     margin-bottom: 73px;
-    grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
+    max-width: calc(100% - 48px);
+    grid-template-columns: 340px 1fr;
   }
 }
-@media screen and (max-width: 424px) {
+@media screen and (max-width: 767px) {
   .places__item {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 425px) {
+  .places__item {
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 320px) {
+  .places__item {
+    grid-template-columns: 320px;
     row-gap: 32px;
     margin-bottom: 50px;
-    grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
   }
 }
