--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,19 +1,14 @@
 .places__paragraph {
-  font-family: 'Inter';
   font-weight: 400;
   text-align: left;
-  margin: 0;
+  margin: 0 0 25px 0;
   padding: 0;
   color: #fff;
+  font-size: 18px;
+  line-height: 29px;
 }
-.places__paragraph:nth-of-type(2n) {
-    margin-top: 25px;
-}
-@media screen and (min-width: 768px) {
-  .places__paragraph { 
-    font-size: 18px;
-    line-height: 29px;
-  }
+.places__paragraph:last-of-type {
+    margin-bottom: 0;
 }
 @media screen and (max-width: 767px) {
   .places__paragraph {
