--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,17 +1,12 @@
 .places__title {
-  font-family: 'Inter';
   font-weight: 900;
   text-align: left;
   color: #fff;
   margin: 0;
+  font-size: 72px;
+  line-height: 76px;
 }
-@media screen and (min-width: 1024px) {
-  .places__title {
-    font-size: 72px;
-    line-height: 76px;
-  }
-}
-@media screen and (min-width: 425px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .places__title {
     font-size: 42px;
     line-height: 46px;
