--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -2,9 +2,10 @@
   color: #aaa;
   padding: 0;
   margin: 0;
-  font-family: 'Inter';
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
   text-align: left;
+  letter-spacing: .2em;
+  text-transform: uppercase;
 }
