--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,20 +1,12 @@
-
-@media screen and (min-width: 1280px) {
-  .places { 
-    margin-top: 92px;
-  }
+.places { 
+  margin-top: 92px;
 }
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .places {
-    margin-top: 92px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .places {
     margin-top: 88px;
   }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .places {
     margin-top: 64px;
   }
