--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -21,6 +21,7 @@
   .lead__title {
     font-size: 54px;
     line-height: 58px;
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 424px) {
